// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Integration 100039 > SP1columnPC2column 1`] = `
"<!-- JSON-RASTA:100039--SPx1PCx2  -->
<div
  style="display: none"
  class="rad-table-existItemDisplay"
  data-module-name="ecm-dynamic-content"
>
  <script
    class="rad-table-proto"
    type="text/template"
  >
    <div
      class="ecm-ad"
      data-ad-id="100039"
    >
      <a
        class="ecm-ad-link"
        href="#TEXTURL1#"
      >
        <div class="ecm-ad-image-block">
          <img
            class="ecm-ad-image ecm-ad-image-ratio-3x2"
            src="https://r.r10s.jp/com/img/home/t.gif?resize=720:480"
            data-lazy-loading="#IMAGESRC1#"
            alt="#IMAGEALT1#"
          />
        </div>
        <div class="ecm-ad-body mt-12">
          <p class="ecm-ad-name text-sm">#TEXT1L1#</p>
          <div class="ecm-ad-price-container mt-8">
            <p class="ecm-ad-price-amount text-2xl">#TEXT2L1#<span class="ecm-ad-price-unit text-sm">#TEXT2L2#</span></p>
            <p class="ecm-ad-price-free-shipping text-sm mt-4 ecm-ad-price-free-shipping-#ICONTXTCLASS1-1#">#ICONTXT1-1#</p>
          </div>
          <div class="ecm-ad-label-container">
            <p class="ecm-ad-label">#ICONTXT2-1#</p>
          </div>
        </div>
      </a>
      <a
        class="ecm-ad-review-link mt-8"
        href="#TEXTURL4#"
      >
        <span class="ecm-ad-review-link-star ecm-ad-review-link-star-#ICONTXTCLASS3-1#"></span>
        <span class="ecm-ad-review-link-rate">#TEXT3L1#</span>
        <span class="ecm-ad-review-link-count">(#TEXT4L1#)</span>
      </a>
    </div>
  </script>
  <div
    class="rad-table-config"
    event_target="body"
    noready="1"
    event_name="rastaloadcomplete"
    url="★"
    ★
    ★
    ★
    ★
    ★
  ></div>
  <div class="rad-table-frame">
    <div class="rad-table-body d-grid d-grid-col-1 md-d-grid-col-2 d-grid-gap-y-16 md-d-grid-gap-x-24 md-d-grid-gap-y-32 sm-ecm-ad-container-divided-y"></div>
  </div>
</div>
<!-- JSON-RASTA:100039--SPx1PCx2  -->
"
`;

exports[`Integration 100039 > SP1columnPC3column 1`] = `
"<!-- JSON-RASTA:100039--SPx1PCx3  -->
<div
  style="display: none"
  class="rad-table-existItemDisplay"
  data-module-name="ecm-dynamic-content"
>
  <script
    class="rad-table-proto"
    type="text/template"
  >
    <div
      class="ecm-ad"
      data-ad-id="100039"
    >
      <a
        class="ecm-ad-link"
        href="#TEXTURL1#"
      >
        <div class="ecm-ad-image-block">
          <img
            class="ecm-ad-image ecm-ad-image-ratio-3x2"
            src="https://r.r10s.jp/com/img/home/t.gif?resize=720:480"
            data-lazy-loading="#IMAGESRC1#"
            alt="#IMAGEALT1#"
          />
        </div>
        <div class="ecm-ad-body mt-12">
          <p class="ecm-ad-name text-sm">#TEXT1L1#</p>
          <div class="ecm-ad-price-container mt-8">
            <p class="ecm-ad-price-amount text-2xl">#TEXT2L1#<span class="ecm-ad-price-unit text-sm">#TEXT2L2#</span></p>
            <p class="ecm-ad-price-free-shipping text-sm mt-4 ecm-ad-price-free-shipping-#ICONTXTCLASS1-1#">#ICONTXT1-1#</p>
          </div>
          <div class="ecm-ad-label-container">
            <p class="ecm-ad-label">#ICONTXT2-1#</p>
          </div>
        </div>
      </a>
      <a
        class="ecm-ad-review-link mt-8"
        href="#TEXTURL4#"
      >
        <span class="ecm-ad-review-link-star ecm-ad-review-link-star-#ICONTXTCLASS3-1#"></span>
        <span class="ecm-ad-review-link-rate">#TEXT3L1#</span>
        <span class="ecm-ad-review-link-count">(#TEXT4L1#)</span>
      </a>
    </div>
  </script>
  <div
    class="rad-table-config"
    event_target="body"
    noready="1"
    event_name="rastaloadcomplete"
    url="★"
    ★
    ★
    ★
    ★
    ★
  ></div>
  <div class="rad-table-frame">
    <div class="rad-table-body d-grid d-grid-col-1 md-d-grid-col-3 d-grid-gap-y-16 md-d-grid-gap-x-24 md-d-grid-gap-y-32 sm-ecm-ad-container-divided-y"></div>
  </div>
</div>
<!-- JSON-RASTA:100039--SPx1PCx3  -->
"
`;

exports[`Integration 100039 > SP1columnPC4column 1`] = `
"<!-- JSON-RASTA:100039--SPx1PCx4  -->
<div
  style="display: none"
  class="rad-table-existItemDisplay"
  data-module-name="ecm-dynamic-content"
>
  <script
    class="rad-table-proto"
    type="text/template"
  >
    <div
      class="ecm-ad"
      data-ad-id="100039"
    >
      <a
        class="ecm-ad-link"
        href="#TEXTURL1#"
      >
        <div class="ecm-ad-image-block">
          <img
            class="ecm-ad-image ecm-ad-image-ratio-3x2"
            src="https://r.r10s.jp/com/img/home/t.gif?resize=720:480"
            data-lazy-loading="#IMAGESRC1#"
            alt="#IMAGEALT1#"
          />
        </div>
        <div class="ecm-ad-body mt-12">
          <p class="ecm-ad-name text-sm">#TEXT1L1#</p>
          <div class="ecm-ad-price-container mt-8">
            <p class="ecm-ad-price-amount text-2xl">#TEXT2L1#<span class="ecm-ad-price-unit text-sm">#TEXT2L2#</span></p>
            <p class="ecm-ad-price-free-shipping text-sm mt-4 ecm-ad-price-free-shipping-#ICONTXTCLASS1-1#">#ICONTXT1-1#</p>
          </div>
          <div class="ecm-ad-label-container">
            <p class="ecm-ad-label">#ICONTXT2-1#</p>
          </div>
        </div>
      </a>
      <a
        class="ecm-ad-review-link mt-8"
        href="#TEXTURL4#"
      >
        <span class="ecm-ad-review-link-star ecm-ad-review-link-star-#ICONTXTCLASS3-1#"></span>
        <span class="ecm-ad-review-link-rate">#TEXT3L1#</span>
        <span class="ecm-ad-review-link-count">(#TEXT4L1#)</span>
      </a>
    </div>
  </script>
  <div
    class="rad-table-config"
    event_target="body"
    noready="1"
    event_name="rastaloadcomplete"
    url="★"
    ★
    ★
    ★
    ★
    ★
  ></div>
  <div class="rad-table-frame">
    <div class="rad-table-body d-grid d-grid-col-1 md-d-grid-col-4 d-grid-gap-y-16 md-d-grid-gap-x-24 md-d-grid-gap-y-32 sm-ecm-ad-container-divided-y"></div>
  </div>
</div>
<!-- JSON-RASTA:100039--SPx1PCx4  -->
"
`;

exports[`Static 100039 > SP1columnPC2column 1`] = `
"
    <div
      class="d-grid d-grid-col-1 md-d-grid-col-2 d-grid-gap-y-16 md-d-grid-gap-x-24 md-d-grid-gap-y-32 sm-ecm-ad-container-divided-y"
    >
      <div
  class="ecm-ad"
  data-ad-id="100039"
>
  <a
    class="ecm-ad-link"
    href=""
  >
    <div class="ecm-ad-image-block">
      <img
        class="ecm-ad-image ecm-ad-image-ratio-3x2"
        src="https://r.r10s.jp/com/img/home/t.gif?resize=720:480"
        data-lazy-loading="https://placehold.co/720x480?text=3x2"
        alt=""
      />
    </div>
    <div class="ecm-ad-body mt-12">
      <p class="ecm-ad-name text-sm">商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０</p>
      <div class="ecm-ad-price-container mt-8">
        <p class="ecm-ad-price-amount text-2xl">9,999,999<span class="ecm-ad-price-unit text-sm">円</span></p>
        <p class="ecm-ad-price-free-shipping text-sm mt-4 ecm-ad-price-free-shipping-free_shipping">送料無料</p>
      </div>
      <div class="ecm-ad-label-container">
        <p class="ecm-ad-label">ポイント20倍</p>
      </div>
    </div>
  </a>
  <a
    class="ecm-ad-review-link mt-8"
    href=""
  >
    <span class="ecm-ad-review-link-star ecm-ad-review-link-star-review_350"></span>
    <span class="ecm-ad-review-link-rate">3.50</span>
    <span class="ecm-ad-review-link-count">(9,999件)</span>
  </a>
</div>
<div
  class="ecm-ad"
  data-ad-id="100039"
>
  <a
    class="ecm-ad-link"
    href=""
  >
    <div class="ecm-ad-image-block">
      <img
        class="ecm-ad-image ecm-ad-image-ratio-3x2"
        src="https://r.r10s.jp/com/img/home/t.gif?resize=720:480"
        data-lazy-loading="https://placehold.co/720x480?text=3x2"
        alt=""
      />
    </div>
    <div class="ecm-ad-body mt-12">
      <p class="ecm-ad-name text-sm">商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０</p>
      <div class="ecm-ad-price-container mt-8">
        <p class="ecm-ad-price-amount text-2xl">9,999,999<span class="ecm-ad-price-unit text-sm">円</span></p>
        <p class="ecm-ad-price-free-shipping text-sm mt-4 ecm-ad-price-free-shipping-free_shipping">送料無料</p>
      </div>
      <div class="ecm-ad-label-container">
        <p class="ecm-ad-label">ポイント20倍</p>
      </div>
    </div>
  </a>
  <a
    class="ecm-ad-review-link mt-8"
    href=""
  >
    <span class="ecm-ad-review-link-star ecm-ad-review-link-star-review_350"></span>
    <span class="ecm-ad-review-link-rate">3.50</span>
    <span class="ecm-ad-review-link-count">(9,999件)</span>
  </a>
</div>

    </div>
  "
`;

exports[`Static 100039 > SP1columnPC3column 1`] = `
"
    <div
      class="d-grid d-grid-col-1 md-d-grid-col-3 d-grid-gap-y-16 md-d-grid-gap-x-24 md-d-grid-gap-y-32 sm-ecm-ad-container-divided-y"
    >
      <div
  class="ecm-ad"
  data-ad-id="100039"
>
  <a
    class="ecm-ad-link"
    href=""
  >
    <div class="ecm-ad-image-block">
      <img
        class="ecm-ad-image ecm-ad-image-ratio-3x2"
        src="https://r.r10s.jp/com/img/home/t.gif?resize=720:480"
        data-lazy-loading="https://placehold.co/720x480?text=3x2"
        alt=""
      />
    </div>
    <div class="ecm-ad-body mt-12">
      <p class="ecm-ad-name text-sm">商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０</p>
      <div class="ecm-ad-price-container mt-8">
        <p class="ecm-ad-price-amount text-2xl">9,999,999<span class="ecm-ad-price-unit text-sm">円</span></p>
        <p class="ecm-ad-price-free-shipping text-sm mt-4 ecm-ad-price-free-shipping-free_shipping">送料無料</p>
      </div>
      <div class="ecm-ad-label-container">
        <p class="ecm-ad-label">ポイント20倍</p>
      </div>
    </div>
  </a>
  <a
    class="ecm-ad-review-link mt-8"
    href=""
  >
    <span class="ecm-ad-review-link-star ecm-ad-review-link-star-review_350"></span>
    <span class="ecm-ad-review-link-rate">3.50</span>
    <span class="ecm-ad-review-link-count">(9,999件)</span>
  </a>
</div>
<div
  class="ecm-ad"
  data-ad-id="100039"
>
  <a
    class="ecm-ad-link"
    href=""
  >
    <div class="ecm-ad-image-block">
      <img
        class="ecm-ad-image ecm-ad-image-ratio-3x2"
        src="https://r.r10s.jp/com/img/home/t.gif?resize=720:480"
        data-lazy-loading="https://placehold.co/720x480?text=3x2"
        alt=""
      />
    </div>
    <div class="ecm-ad-body mt-12">
      <p class="ecm-ad-name text-sm">商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０</p>
      <div class="ecm-ad-price-container mt-8">
        <p class="ecm-ad-price-amount text-2xl">9,999,999<span class="ecm-ad-price-unit text-sm">円</span></p>
        <p class="ecm-ad-price-free-shipping text-sm mt-4 ecm-ad-price-free-shipping-free_shipping">送料無料</p>
      </div>
      <div class="ecm-ad-label-container">
        <p class="ecm-ad-label">ポイント20倍</p>
      </div>
    </div>
  </a>
  <a
    class="ecm-ad-review-link mt-8"
    href=""
  >
    <span class="ecm-ad-review-link-star ecm-ad-review-link-star-review_350"></span>
    <span class="ecm-ad-review-link-rate">3.50</span>
    <span class="ecm-ad-review-link-count">(9,999件)</span>
  </a>
</div>
<div
  class="ecm-ad"
  data-ad-id="100039"
>
  <a
    class="ecm-ad-link"
    href=""
  >
    <div class="ecm-ad-image-block">
      <img
        class="ecm-ad-image ecm-ad-image-ratio-3x2"
        src="https://r.r10s.jp/com/img/home/t.gif?resize=720:480"
        data-lazy-loading="https://placehold.co/720x480?text=3x2"
        alt=""
      />
    </div>
    <div class="ecm-ad-body mt-12">
      <p class="ecm-ad-name text-sm">商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０</p>
      <div class="ecm-ad-price-container mt-8">
        <p class="ecm-ad-price-amount text-2xl">9,999,999<span class="ecm-ad-price-unit text-sm">円</span></p>
        <p class="ecm-ad-price-free-shipping text-sm mt-4 ecm-ad-price-free-shipping-free_shipping">送料無料</p>
      </div>
      <div class="ecm-ad-label-container">
        <p class="ecm-ad-label">ポイント20倍</p>
      </div>
    </div>
  </a>
  <a
    class="ecm-ad-review-link mt-8"
    href=""
  >
    <span class="ecm-ad-review-link-star ecm-ad-review-link-star-review_350"></span>
    <span class="ecm-ad-review-link-rate">3.50</span>
    <span class="ecm-ad-review-link-count">(9,999件)</span>
  </a>
</div>

    </div>
  "
`;

exports[`Static 100039 > SP1columnPC4column 1`] = `
"
    <div
      class="d-grid d-grid-col-1 md-d-grid-col-4 d-grid-gap-y-16 md-d-grid-gap-x-24 md-d-grid-gap-y-32 sm-ecm-ad-container-divided-y"
    >
      <div
  class="ecm-ad"
  data-ad-id="100039"
>
  <a
    class="ecm-ad-link"
    href=""
  >
    <div class="ecm-ad-image-block">
      <img
        class="ecm-ad-image ecm-ad-image-ratio-3x2"
        src="https://r.r10s.jp/com/img/home/t.gif?resize=720:480"
        data-lazy-loading="https://placehold.co/720x480?text=3x2"
        alt=""
      />
    </div>
    <div class="ecm-ad-body mt-12">
      <p class="ecm-ad-name text-sm">商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０</p>
      <div class="ecm-ad-price-container mt-8">
        <p class="ecm-ad-price-amount text-2xl">9,999,999<span class="ecm-ad-price-unit text-sm">円</span></p>
        <p class="ecm-ad-price-free-shipping text-sm mt-4 ecm-ad-price-free-shipping-free_shipping">送料無料</p>
      </div>
      <div class="ecm-ad-label-container">
        <p class="ecm-ad-label">ポイント20倍</p>
      </div>
    </div>
  </a>
  <a
    class="ecm-ad-review-link mt-8"
    href=""
  >
    <span class="ecm-ad-review-link-star ecm-ad-review-link-star-review_350"></span>
    <span class="ecm-ad-review-link-rate">3.50</span>
    <span class="ecm-ad-review-link-count">(9,999件)</span>
  </a>
</div>
<div
  class="ecm-ad"
  data-ad-id="100039"
>
  <a
    class="ecm-ad-link"
    href=""
  >
    <div class="ecm-ad-image-block">
      <img
        class="ecm-ad-image ecm-ad-image-ratio-3x2"
        src="https://r.r10s.jp/com/img/home/t.gif?resize=720:480"
        data-lazy-loading="https://placehold.co/720x480?text=3x2"
        alt=""
      />
    </div>
    <div class="ecm-ad-body mt-12">
      <p class="ecm-ad-name text-sm">商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０</p>
      <div class="ecm-ad-price-container mt-8">
        <p class="ecm-ad-price-amount text-2xl">9,999,999<span class="ecm-ad-price-unit text-sm">円</span></p>
        <p class="ecm-ad-price-free-shipping text-sm mt-4 ecm-ad-price-free-shipping-free_shipping">送料無料</p>
      </div>
      <div class="ecm-ad-label-container">
        <p class="ecm-ad-label">ポイント20倍</p>
      </div>
    </div>
  </a>
  <a
    class="ecm-ad-review-link mt-8"
    href=""
  >
    <span class="ecm-ad-review-link-star ecm-ad-review-link-star-review_350"></span>
    <span class="ecm-ad-review-link-rate">3.50</span>
    <span class="ecm-ad-review-link-count">(9,999件)</span>
  </a>
</div>
<div
  class="ecm-ad"
  data-ad-id="100039"
>
  <a
    class="ecm-ad-link"
    href=""
  >
    <div class="ecm-ad-image-block">
      <img
        class="ecm-ad-image ecm-ad-image-ratio-3x2"
        src="https://r.r10s.jp/com/img/home/t.gif?resize=720:480"
        data-lazy-loading="https://placehold.co/720x480?text=3x2"
        alt=""
      />
    </div>
    <div class="ecm-ad-body mt-12">
      <p class="ecm-ad-name text-sm">商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０</p>
      <div class="ecm-ad-price-container mt-8">
        <p class="ecm-ad-price-amount text-2xl">9,999,999<span class="ecm-ad-price-unit text-sm">円</span></p>
        <p class="ecm-ad-price-free-shipping text-sm mt-4 ecm-ad-price-free-shipping-free_shipping">送料無料</p>
      </div>
      <div class="ecm-ad-label-container">
        <p class="ecm-ad-label">ポイント20倍</p>
      </div>
    </div>
  </a>
  <a
    class="ecm-ad-review-link mt-8"
    href=""
  >
    <span class="ecm-ad-review-link-star ecm-ad-review-link-star-review_350"></span>
    <span class="ecm-ad-review-link-rate">3.50</span>
    <span class="ecm-ad-review-link-count">(9,999件)</span>
  </a>
</div>
<div
  class="ecm-ad"
  data-ad-id="100039"
>
  <a
    class="ecm-ad-link"
    href=""
  >
    <div class="ecm-ad-image-block">
      <img
        class="ecm-ad-image ecm-ad-image-ratio-3x2"
        src="https://r.r10s.jp/com/img/home/t.gif?resize=720:480"
        data-lazy-loading="https://placehold.co/720x480?text=3x2"
        alt=""
      />
    </div>
    <div class="ecm-ad-body mt-12">
      <p class="ecm-ad-name text-sm">商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０商品名４５６７８９０</p>
      <div class="ecm-ad-price-container mt-8">
        <p class="ecm-ad-price-amount text-2xl">9,999,999<span class="ecm-ad-price-unit text-sm">円</span></p>
        <p class="ecm-ad-price-free-shipping text-sm mt-4 ecm-ad-price-free-shipping-free_shipping">送料無料</p>
      </div>
      <div class="ecm-ad-label-container">
        <p class="ecm-ad-label">ポイント20倍</p>
      </div>
    </div>
  </a>
  <a
    class="ecm-ad-review-link mt-8"
    href=""
  >
    <span class="ecm-ad-review-link-star ecm-ad-review-link-star-review_350"></span>
    <span class="ecm-ad-review-link-rate">3.50</span>
    <span class="ecm-ad-review-link-count">(9,999件)</span>
  </a>
</div>

    </div>
  "
`;
